# All-in-One-Office-Assistant-Agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  需求.txt
src/office_assistant/: __main__.py
src/office_assistant/audio/: __init__.py  transcriber.py
src/office_assistant/backends/: __init__.py  base.py  claude.py  factory.py  ollama.py  openai_backend.py  schema.py
src/office_assistant/cli/: __init__.py  config_cmd.py  email_cmd.py  main.py  meeting_cmd.py  report_cmd.py  spreadsheet_cmd.py
src/office_assistant/config/: __init__.py  loader.py  schema.py
src/office_assistant/core/: __init__.py  router.py  skill_base.py  skill_registry.py  skill_result.py
src/office_assistant/models/: __init__.py  email_models.py  meeting.py  report.py  spreadsheet.py
src/office_assistant/skills/: __init__.py  email_skill.py  meeting.py  report.py  spreadsheet.py
src/office_assistant/utils/: __init__.py  file_io.py  formatters.py
tests/: conftest.py
tests/test_skills/: test_email.py  test_meeting.py  test_report.py  test_spreadsheet.py
